Add e2e shared SDK benchmarks